--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Wi-Fi Heatmap — Ekahau-like (n fixed)</title>
+<title>Wi-Fi Heatmap — Ekahau-like + Contours</title>
 <style>
   :root{ --bg:#0f1220; --panel:#171a2b; --muted:#9aa4b2; --text:#e8ecf1;
          --card:#1b2035; --btn:#232845; --ring:#2a7fff55; --danger:#ff7b7b; }
@@ -38,7 +38,7 @@
   button.danger{background:#3a1b1b;border-color:#5a2a2a;color:#ffc6c6}
   .chip{font-size:12px;border:1px solid #2a3156;border-radius:999px;padding:4px 9px;color:#9aa4b2;display:inline-flex;gap:6px;align-items:center}
   .legend{display:flex;align-items:center;gap:10px}
-  .grad{width=220px;height:12px;border-radius:999px;border:1px solid #2a3156}
+  .grad{width:220px;height:12px;border-radius:999px;border:1px solid #2a3156}
   .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:8px}
   .grid-1{display:grid;grid-template-columns:1fr;gap:8px}
   .kbd{font-family:ui-monospace,Menlo,Consolas,monospace;background:#222846;border:1px solid #2a3156;border-radius:6px;padding:2px 6px;color:#b9c3ff;font-size:12px}
@@ -169,6 +169,10 @@
       <div class="grid">
         <div><div class="label">ความเนียน Blur (px)</div><input type="number" id="blurPx" value="16" min="0" step="1"/></div>
         <div><div class="label">โปร่งใสฮีตแมป</div><input type="number" id="alpha" value="0.6" min="0" max="1" step="0.05"/></div>
+        <div style="grid-column:1/-1">
+          <label><input type="checkbox" id="showContours" checked/> แสดงเส้นขอบเขต (คอนทัวร์) ทีละ −5 dBm</label>
+          <span class="small muted">ระดับ: −30, −35, −40, −55, −60, −65, −70 dBm</span>
+        </div>
       </div>
       <div class="row" style="margin-top:10px">
         <button id="btnRender">🔥 สร้าง Heatmap</button>
@@ -275,6 +279,8 @@ pillSurvey.onclick=()=>setApp('survey');
 const RSSI_MIN=-80, P_GRAY=-67, P_YELLOW=-60, P_GREEN=-30;
 const N_BY_BAND = { '2.4': 2.2, '5': 2.4 };
 const GRAY_BASE=[128,128,128], GRAY_LIGHT=[220,220,220];
+const CONTOUR_LEVELS=[-30,-35,-40,-55,-60,-65,-70]; // ปรับได้
+const CONTOUR_STEP=2; // downsample cell size (px) เพื่อความไว (2 หรือ 3 แนะนำ)
 const $=s=>document.querySelector(s);
 const clamp=(v,a,b)=>Math.max(a,Math.min(b,v));
 const dist=(a,b)=>Math.hypot(a.x-b.x,a.y-b.y);
@@ -345,12 +351,7 @@ function setMode(newMode){
   : newMode==='mat'  ? 'โหมด: วัสดุ (ลากเส้น)'
   : newMode==='scale'? 'โหมด: ตั้งสเกล'
   : 'โหมด: Idle (เม้าส์ปกติ)';
-  // เปลี่ยนเคอร์เซอร์ตามโหมด
-  if(newMode==='ap' || newMode==='mat' || newMode==='scale'){
-    canvas.style.cursor='crosshair';
-  }else{
-    canvas.style.cursor='default';
-  }
+  canvas.style.cursor = (newMode==='ap'||newMode==='mat'||newMode==='scale') ? 'crosshair' : 'default';
   hideProbe();
 }
 
@@ -396,7 +397,7 @@ function drawPermanent(){
   });
 }
 
-/* ===== overlay arrows ===== */
+/* ===== overlay helpers ===== */
 function clearOverlay(){ octx.clearRect(0,0,overlay.width,overlay.height); }
 function drawArrow(a,b,{color='#6ae3ff',width=3.5,head=12,dash=[10,6],label=''}={}){
   octx.save(); octx.lineWidth=width; octx.setLineDash(dash); octx.strokeStyle=color;
@@ -463,23 +464,81 @@ function rssiFromAPs(x,y){
   return 10*Math.log10(Math.max(1e-15,sum_mW));
 }
 
+/* ===== marching squares (คอนทัวร์) ===== */
+function drawContours(field,w,h,levels,step=2){
+  if(!$('#showContours').checked) return;
+  ctx.save();
+  ctx.strokeStyle='#ffffff';
+  ctx.lineWidth=1.3;
+  ctx.globalAlpha=0.95;
+  // วาดเป็นเส้นสั้น ๆ จำนวนมาก (ไวกว่าเชื่อม path ยาว)
+  const nx=Math.floor((w-1)/step), ny=Math.floor((h-1)/step);
+  for(const L of levels){
+    for(let gy=0; gy<ny; gy++){
+      const y0=gy*step, y1=y0+step;
+      for(let gx=0; gx<nx; gx++){
+        const x0=gx*step, x1=x0+step;
+        const i00=y0*w + x0, i10=y0*w + x1, i11=y1*w + x1, i01=y1*w + x0;
+        const v00=field[i00], v10=field[i10], v11=field[i11], v01=field[i01];
+        // สร้างรหัสเคสจากการเปรียบเทียบกับระดับ L
+        const b0 = v00>=L ? 1:0, b1=v10>=L?1:0, b2=v11>=L?1:0, b3=v01>=L?1:0;
+        const code = (b0) | (b1<<1) | (b2<<2) | (b3<<3);
+        if(code===0 || code===15) continue; // ไม่ตัดผ่าน
+        // ฟังก์ชันบอกจุดตัดบนขอบ (interpolate)
+        const interp=(xa,ya,xb,yb,va,vb)=>{
+          const t=(L-va)/((vb-va)||1e-9);
+          return [ xa + (xb-xa)*t, ya + (yb-ya)*t ];
+        };
+        // จุดกึ่งบน(T),ขวา(R),ล่าง(B),ซ้าย(L)
+        const T=interp(x0,y0, x1,y0, v00,v10);
+        const R=interp(x1,y0, x1,y1, v10,v11);
+        const B=interp(x0,y1, x1,y1, v01,v11);
+        const Lp=interp(x0,y0, x0,y1, v00,v01);
+        // เคสมาตรฐาน (resolve 16 cases)
+        // จะวาดเป็นเส้นสั้น ๆ ต่อขอบ
+        const seg = (p,q)=>{ ctx.beginPath(); ctx.moveTo(p[0],p[1]); ctx.lineTo(q[0],q[1]); ctx.stroke(); };
+        switch(code){
+          case 1: case 14: seg(Lp,T); break;
+          case 2: case 13: seg(T,R); break;
+          case 3: case 12: seg(Lp,R); break;
+          case 4: case 11: seg(R,B); break;
+          case 5:           seg(Lp,T); seg(R,B); break; // ambiguous; สองเส้น
+          case 6: case 9 : seg(T,B); break;
+          case 7: case 8 : seg(Lp,B); break;
+          case 10:          seg(T,R); seg(Lp,B); break; // ambiguous; สองเส้น
+        }
+      }
+    }
+  }
+  ctx.restore();
+}
+
 /* ===== render ===== */
 function renderHeatmap(){
   if(!floorImg||aps.length===0) return;
   const alpha=clamp(parseFloat($('#alpha').value||'0.6'),0,1);
   const blurPx=Math.max(0,parseInt($('#blurPx').value||'16',10));
   makeFixedLegend(); drawBase();
+
+  // 1) คำนวณ RSSI และระบายสี
   const heat=document.createElement('canvas'); heat.width=canvas.width; heat.height=canvas.height;
   const hctx=heat.getContext('2d',{willReadFrequently:true});
   const img=hctx.createImageData(heat.width,heat.height), arr=img.data;
+  const field=new Float32Array(heat.width*heat.height); // เก็บ RSSI สำหรับคอนทัวร์
   for(let y=0;y<heat.height;y++){
     for(let x=0;x<heat.width;x++){
-      const [r,g,b]=colorFromRSSI(rssiFromAPs(x,y));
+      const rssi=rssiFromAPs(x,y); field[y*heat.width+x]=rssi;
+      const [r,g,b]=colorFromRSSI(rssi);
       const i=(y*heat.width+x)*4; arr[i]=r; arr[i+1]=g; arr[i+2]=b; arr[i+3]=255;
     }
   }
   hctx.putImageData(img,0,0);
   ctx.save(); ctx.globalAlpha=alpha; if(blurPx>0) ctx.filter=`blur(${blurPx}px)`; ctx.drawImage(heat,0,0); ctx.filter='none'; ctx.restore();
+
+  // 2) วาดคอนทัวร์เส้นขาวบนแคนวาสหลัก (ให้อยู่เหนือฮีตแมป)
+  drawContours(field, heat.width, heat.height, CONTOUR_LEVELS, CONTOUR_STEP);
+
+  // 3) วาดวัตถุถาวร (AP/วัสดุ) ทับบนสุด
   drawPermanent(); hasRendered=true;
 }
 
@@ -561,7 +620,7 @@ $('#btnExport').onclick =()=>{ const a=document.createElement('a'); a.download='
 $('#btnSave').onclick=()=>{
   const payload={ aps, segments,
     alpha:+($('#alpha').value||0.6), blurPx:+($('#blurPx').value||16),
-    scale:scale.pxPerMeter, floorScale };
+    scale:scale.pxPerMeter, floorScale, showContours: $('#showContours').checked };
   const blob=new Blob([JSON.stringify(payload,null,2)],{type:"application/json"});
   const url=URL.createObjectURL(blob); const a=document.createElement('a');
   a.href=url; a.download='heatmap_project_planning.json'; a.click(); URL.revokeObjectURL(url);
@@ -575,6 +634,7 @@ $('#loadJson').addEventListener('change', e=>{
       segments=obj.segments||[];
       $('#alpha').value=obj.alpha??0.6; $('#blurPx').value=obj.blurPx??16;
       scale.pxPerMeter=obj.scale||null; floorScale=clamp(obj.floorScale ?? floorScale,0.2,1.5);
+      if(typeof obj.showContours==='boolean') $('#showContours').checked=obj.showContours;
       UI.imgScale.value=Math.round(floorScale*100); UI.imgScaleNum.value=Math.round(floorScale*100);
       UI.scaleLabel.textContent=scale.pxPerMeter?`${(scale.pxPerMeter).toFixed(1)} px/เมตร`:'ยังไม่ตั้ง';
       drawBase(); if(hasRendered) renderHeatmap(); else drawPermanent(); refreshAPList(); refreshMatList();
@@ -647,7 +707,7 @@ document.addEventListener('keydown', e=>{
   if(e.key==='a'||e.key==='A') setMode('ap');
   if(e.key==='w'||e.key==='W') setMode('mat');
   if(e.key==='h'||e.key==='H'){ renderHeatmap(); hideProbe(); }
-  if(e.key==='Escape')        setMode('idle'); // เม้าส์ปกติ
+  if(e.key==='Escape')        setMode('idle');
 });
 
 /* ===== image scale controls ===== */
@@ -662,8 +722,7 @@ UI.imgScaleNum.addEventListener('input', e=> setFloorScaleFromInput(e.target.val
 /* ===== init ===== */
 (function init(){
   applyCanvasCSSSize();
-  setApp('planning');           // เข้า Planning
-  setMode('idle');              // เริ่มที่เม้าส์ปกติ
+  setApp('planning'); setMode('idle');
   UI.scaleLabel.textContent='ยังไม่ตั้ง';
   UI.apBand.value='5';
   drawBase(); drawPermanent();
@@ -672,3 +731,4 @@ UI.imgScaleNum.addEventListener('input', e=> setFloorScaleFromInput(e.target.val
 </script>
 </body>
 </html>
+
